--- a/Lib.AspNetCore.ServerTiming/Lib.AspNetCore.ServerTiming.csproj
+++ b/Lib.AspNetCore.ServerTiming/Lib.AspNetCore.ServerTiming.csproj
@@ -2,9 +2,9 @@
   <PropertyGroup>
     <Description>Lib.AspNetCore.ServerTiming is a library which provides Server Timing API support for ASP.NET Core.</Description>
     <Copyright>Copyright © 2017 - 2018 Tomasz Pęczek</Copyright>
-    <VersionPrefix>2.0.0</VersionPrefix>
+    <VersionPrefix>2.1.0</VersionPrefix>
     <Authors>Tomasz Pęczek</Authors>
-    <TargetFrameworks>net451;netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>net451;netstandard1.6;netstandard2.0</TargetFrameworks>
     <AssemblyTitle>Lib.AspNetCore.ServerTiming</AssemblyTitle>
     <AssemblyName>Lib.AspNetCore.ServerTiming</AssemblyName>
     <PackageId>Lib.AspNetCore.ServerTiming</PackageId>
