--- a/Test.AspNetCore.ServerTiming/Test.AspNetCore.ServerTiming.csproj
+++ b/Test.AspNetCore.ServerTiming/Test.AspNetCore.ServerTiming.csproj
@@ -1,13 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.1;netcoreapp3.0;net461</TargetFrameworks>
   	<IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
   	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="1.0.0" />
 	  <PackageReference Include="xunit" Version="2.3.1" />
 	  <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' != 'netcoreapp3.0'">
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="[2.1.0,3.0.0)" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="[3.0.0,4.0.0)" />
   </ItemGroup>
   <ItemGroup>
 	  <ProjectReference Include="..\Lib.AspNetCore.ServerTiming\Lib.AspNetCore.ServerTiming.csproj" />
