--- a/Test.AspNetCore.ServerTiming/Test.AspNetCore.ServerTiming.csproj
+++ b/Test.AspNetCore.ServerTiming/Test.AspNetCore.ServerTiming.csproj
@@ -4,9 +4,12 @@
   	<IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-  	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-	  <PackageReference Include="xunit" Version="2.3.1" />
-	  <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+	  <PackageReference Include="xunit" Version="2.4.1" />
+	  <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' != 'netcoreapp3.0'">
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="[2.1.0,3.0.0)" />
