--- a/Lib.AspNetCore.ServerTiming/Lib.AspNetCore.ServerTiming.csproj
+++ b/Lib.AspNetCore.ServerTiming/Lib.AspNetCore.ServerTiming.csproj
@@ -27,4 +27,7 @@
   <ItemGroup Condition="('$(TargetFramework)' != 'netcoreapp2.1') And ('$(TargetFramework)' != 'net461')">
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="DotNet.ReproducibleBuilds" Version="0.1.66" PrivateAssets="All"/>
+  </ItemGroup>
 </Project>
