--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Extract VERSION
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      shell: bash
     - name: Setup .NET Core 2.1 SDK
       uses: actions/setup-dotnet@v1
       with:
@@ -33,5 +34,6 @@ jobs:
       run: dotnet pack --configuration Release --no-build
     - name: NuGet Push Lib.AspNetCore.ServerTiming
       run: dotnet nuget push Lib.AspNetCore.ServerTiming/bin/Release/Lib.AspNetCore.ServerTiming.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
+      shell: bash
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
