--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# DocFX generated stuff
+DocFx.AspNetCore.ServerTiming/log.txt
+DocFx.AspNetCore.ServerTiming/api/
+DocFx.AspNetCore.ServerTiming/wwwroot/
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
