--- a/Lib.AspNetCore.ServerTiming.Abstractions/Lib.AspNetCore.ServerTiming.Abstractions.csproj
+++ b/Lib.AspNetCore.ServerTiming.Abstractions/Lib.AspNetCore.ServerTiming.Abstractions.csproj
@@ -1,13 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Description>Lib.AspNetCore.ServerTiming is a library which provides Server Timing API support for ASP.NET Core.</Description>
-    <Copyright>Copyright © 2017 - 2022 Tomasz Pęczek</Copyright>
-    <VersionPrefix>4.4.0</VersionPrefix>
+    <Description>Lib.AspNetCore.ServerTiming.Abstractions provides abstractions for Lib.AspNetCore.ServerTiming, a library which provides Server Timing API support for ASP.NET Core.</Description>
+    <Copyright>Copyright © 2022 Tomasz Pęczek</Copyright>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Tomasz Pęczek</Authors>
     <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0;net6.0;net461</TargetFrameworks>
-    <AssemblyTitle>Lib.AspNetCore.ServerTiming</AssemblyTitle>
-    <AssemblyName>Lib.AspNetCore.ServerTiming</AssemblyName>
-    <PackageId>Lib.AspNetCore.ServerTiming</PackageId>
+    <AssemblyTitle>Lib.AspNetCore.ServerTiming.Abstractions</AssemblyTitle>
+    <AssemblyName>Lib.AspNetCore.ServerTiming.Abstractions</AssemblyName>
+    <PackageId>Lib.AspNetCore.ServerTiming.Abstractions</PackageId>
     <PackageTags>aspnetcore;servertiming;performance</PackageTags>
     <PackageProjectUrl>https://github.com/tpeczek/Lib.AspNetCore.ServerTiming</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -25,24 +25,11 @@
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Lib.AspNetCore.ServerTiming.Abstractions\Lib.AspNetCore.ServerTiming.Abstractions.csproj" />
-  </ItemGroup>
   <ItemGroup Condition="('$(TargetFramework)' == 'netcoreapp2.1') Or ('$(TargetFramework)' == 'net461')">
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="[2.1.0,3.0.0)" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="[2.1.0,3.0.0)" />
   </ItemGroup>
   <ItemGroup Condition="('$(TargetFramework)' != 'netcoreapp2.1') And ('$(TargetFramework)' != 'net461')">
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[3.1.0,5.0.0)" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[5.0.0,6.0.0)" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[6.0.0,7.0.0)" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DotNet.ReproducibleBuilds" Version="0.1.66" PrivateAssets="All" />
