--- a/Lib.AspNetCore.ServerTiming/Lib.AspNetCore.ServerTiming.csproj
+++ b/Lib.AspNetCore.ServerTiming/Lib.AspNetCore.ServerTiming.csproj
@@ -39,7 +39,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[5.0.0,6.0.0)" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[6.0.0,7.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[6.0.0,)" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DotNet.ReproducibleBuilds" Version="0.1.66" PrivateAssets="All" />
