--- a/Lib.AspNetCore.ServerTiming.Abstractions/Lib.AspNetCore.ServerTiming.Abstractions.csproj
+++ b/Lib.AspNetCore.ServerTiming.Abstractions/Lib.AspNetCore.ServerTiming.Abstractions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Lib.AspNetCore.ServerTiming.Abstractions provides abstractions for Lib.AspNetCore.ServerTiming, a library which provides Server Timing API support for ASP.NET Core.</Description>
-    <Copyright>Copyright © 2022 Tomasz Pęczek</Copyright>
+    <Copyright>Copyright © 2022 - 2023 Tomasz Pęczek</Copyright>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Tomasz Pęczek</Authors>
     <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0;net6.0;net461</TargetFrameworks>
