--- a/.github/workflows/cd-abstractions.yml
+++ b/.github/workflows/cd-abstractions.yml
@@ -1,21 +1,17 @@
-name: Lib.AspNetCore.ServerTiming.Abstractions - CD
+name: Lib.ServerTiming.Abstractions - CD
 on:
   push:
     tags:
-    - "aspnetcore-abstractions-v[0-9]+.[0-9]+.[0-9]+"
+    - "abstractions-v[0-9]+.[0-9]+.[0-9]+"
 jobs:
   deployment:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Extract VERSION
-      run: echo "VERSION=${GITHUB_REF/refs\/tags\/aspnetcore-abstractions-v/}" >> $GITHUB_ENV
+      run: echo "VERSION=${GITHUB_REF/refs\/tags\/abstractions-v/}" >> $GITHUB_ENV
       shell: bash
-    - name: Setup .NET Core 2.1 SDK
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '2.1.x'
     - name: Setup .NET 6.0 SDK
       uses: actions/setup-dotnet@v1
       with:
@@ -32,8 +28,8 @@ jobs:
       run: dotnet test --configuration Release --no-build
     - name: Pack
       run: dotnet pack --configuration Release --no-build
-    - name: NuGet Push Lib.AspNetCore.ServerTiming.Abstractions
-      run: dotnet nuget push src/Lib.AspNetCore.ServerTiming.Abstractions/bin/Release/Lib.AspNetCore.ServerTiming.Abstractions.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
+    - name: NuGet Push Lib.ServerTiming.Abstractions
+      run: dotnet nuget push src/Lib.ServerTiming.Abstractions/bin/Release/Lib.ServerTiming.Abstractions.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
       shell: bash
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
