--- a/demos/Demo.Azure.Functions.Worker.ServerTiming/Demo.Azure.Functions.Worker.ServerTiming.csproj
+++ b/demos/Demo.Azure.Functions.Worker.ServerTiming/Demo.Azure.Functions.Worker.ServerTiming.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Lib.Azure.Functions.Worker.ServerTiming\Lib.Azure.Functions.Worker.ServerTiming.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
