--- a/.github/workflows/cd-abstractions.yml
+++ b/.github/workflows/cd-abstractions.yml
@@ -5,13 +5,17 @@ on:
     - "abstractions-v[0-9]+.[0-9]+.[0-9]+"
 jobs:
   deployment:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Extract VERSION
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/abstractions-v/}" >> $GITHUB_ENV
       shell: bash
+    - name: Setup .NET Core 2.1 SDK
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '2.1.x'
     - name: Setup .NET 6.0 SDK
       uses: actions/setup-dotnet@v1
       with:
