--- a/.github/workflows/cd-azurefunctions.yml
+++ b/.github/workflows/cd-azurefunctions.yml
@@ -1,8 +1,8 @@
-name: Lib.AspNetCore.ServerTiming - CD
+name: Lib.Azure.Functions.Worker.ServerTiming - CD
 on:
   push:
     tags:
-    - "aspnetcore-v[0-9]+.[0-9]+.[0-9]+"
+    - "azurefunctions-v[0-9]+.[0-9]+.[0-9]+"
 jobs:
   deployment:
     runs-on: windows-latest
@@ -10,7 +10,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Extract VERSION
-      run: echo "VERSION=${GITHUB_REF/refs\/tags\/aspnetcore-v/}" >> $GITHUB_ENV
+      run: echo "VERSION=${GITHUB_REF/refs\/tags\/azurefunctions-v/}" >> $GITHUB_ENV
       shell: bash
     - name: Setup .NET Core 2.1 SDK
       uses: actions/setup-dotnet@v1
@@ -32,8 +32,8 @@ jobs:
       run: dotnet test --configuration Release --no-build
     - name: Pack
       run: dotnet pack --configuration Release --no-build
-    - name: NuGet Push Lib.AspNetCore.ServerTiming
-      run: dotnet nuget push src/Lib.AspNetCore.ServerTiming/bin/Release/Lib.AspNetCore.ServerTiming.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
+    - name: NuGet Push Lib.Azure.Functions.Worker.ServerTiming
+      run: dotnet nuget push src/Lib.Azure.Functions.Worker.ServerTiming/bin/Release/Lib.Azure.Functions.Worker.ServerTiming.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
       shell: bash
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
