[v1.0.0] Lib.Azure.Functions.Worker.ServerTiming

--- a/src/Lib.Azure.Functions.Worker.ServerTiming/Lib.Azure.Functions.Worker.ServerTiming.csproj
+++ b/src/Lib.Azure.Functions.Worker.ServerTiming/Lib.Azure.Functions.Worker.ServerTiming.csproj
@@ -30,8 +30,8 @@
     <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Lib.ServerTiming.Abstractions\Lib.ServerTiming.Abstractions.csproj" />
-    <!-- <PackageReference Include="Lib.ServerTiming.Abstractions" Version="1.0.0" /> -->
+    <!-- <ProjectReference Include="..\..\src\Lib.ServerTiming.Abstractions\Lib.ServerTiming.Abstractions.csproj" /> -->
+    <PackageReference Include="Lib.ServerTiming.Abstractions" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="[1.8.0,)" />
