--- a/.github/workflows/continuous-delivery-aspnetcore.yml
+++ b/.github/workflows/continuous-delivery-aspnetcore.yml
@@ -1,10 +1,10 @@
-name: Lib.AspNetCore.ServerTiming - CD
+name: Continuous Delivery (ASP.NET Core)
 on:
   push:
     tags:
     - "aspnetcore-v[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  deployment:
+  pack-and-push:
     runs-on: windows-latest
     steps:
     - name: Checkout
@@ -13,15 +13,15 @@ jobs:
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/aspnetcore-v/}" >> $GITHUB_ENV
       shell: bash
     - name: Setup .NET Core 2.1 SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '2.1.x'
     - name: Setup .NET 6.0 SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '6.0.x'
     - name: Setup .NET 7.0 SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '7.0.x'
     - name: Restore
