--- a/.github/workflows/continuous-delivery-azurefunctions.yml
+++ b/.github/workflows/continuous-delivery-azurefunctions.yml
@@ -1,27 +1,27 @@
-name: Lib.ServerTiming.Abstractions - CD
+name: Continuous Delivery (Azure Functions)
 on:
   push:
     tags:
-    - "abstractions-v[0-9]+.[0-9]+.[0-9]+"
+    - "azurefunctions-v[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  deployment:
+  pack-and-push:
     runs-on: windows-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Extract VERSION
-      run: echo "VERSION=${GITHUB_REF/refs\/tags\/abstractions-v/}" >> $GITHUB_ENV
+      run: echo "VERSION=${GITHUB_REF/refs\/tags\/azurefunctions-v/}" >> $GITHUB_ENV
       shell: bash
     - name: Setup .NET Core 2.1 SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '2.1.x'
     - name: Setup .NET 6.0 SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '6.0.x'
     - name: Setup .NET 7.0 SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '7.0.x'
     - name: Restore
@@ -32,8 +32,8 @@ jobs:
       run: dotnet test --configuration Release --no-build
     - name: Pack
       run: dotnet pack --configuration Release --no-build
-    - name: NuGet Push Lib.ServerTiming.Abstractions
-      run: dotnet nuget push src/Lib.ServerTiming.Abstractions/bin/Release/Lib.ServerTiming.Abstractions.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
+    - name: NuGet Push Lib.Azure.Functions.Worker.ServerTiming
+      run: dotnet nuget push src/Lib.Azure.Functions.Worker.ServerTiming/bin/Release/Lib.Azure.Functions.Worker.ServerTiming.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
       shell: bash
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
