--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -8,6 +8,14 @@ on:
     - main
   workflow_dispatch:
 jobs:
+ docker-build:
+    runs-on: windows-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Docker Build
+      run: |
+        docker build . -f AzureFunctions-Testcontainers.Dockerfile
   build-and-test:
     runs-on: windows-latest
     steps:
