--- a/.github/workflows/continuous-delivery-aspnetcore.yml
+++ b/.github/workflows/continuous-delivery-aspnetcore.yml
@@ -4,7 +4,7 @@ on:
     tags:
     - "aspnetcore-v[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  pack-and-push:
+  build-test-pack-and-push:
     runs-on: windows-latest
     steps:
     - name: Checkout
@@ -25,13 +25,13 @@ jobs:
       with:
         dotnet-version: '7.0.x'
     - name: Restore
-      run: dotnet restore
+      run: dotnet restore src/Lib.AspNetCore.ServerTiming
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build src/Lib.AspNetCore.ServerTiming --configuration Release --no-restore
     - name: Test
-      run: dotnet test --configuration Release --no-build
+      run: dotnet test test/Test.AspNetCore.ServerTiming --configuration Release
     - name: Pack
-      run: dotnet pack --configuration Release --no-build
+      run: dotnet pack src/Lib.AspNetCore.ServerTiming --configuration Release --no-build
     - name: NuGet Push Lib.AspNetCore.ServerTiming
       run: dotnet nuget push src/Lib.AspNetCore.ServerTiming/bin/Release/Lib.AspNetCore.ServerTiming.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
       shell: bash
