--- a/.github/workflows/continuous-delivery-azurefunctions.yml
+++ b/.github/workflows/continuous-delivery-azurefunctions.yml
@@ -4,18 +4,14 @@ on:
     tags:
     - "azurefunctions-v[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  pack-and-push:
-    runs-on: windows-latest
+  build-test-pack-and-push:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Extract VERSION
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/azurefunctions-v/}" >> $GITHUB_ENV
       shell: bash
-    - name: Setup .NET Core 2.1 SDK
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '2.1.x'
     - name: Setup .NET 6.0 SDK
       uses: actions/setup-dotnet@v3
       with:
@@ -25,13 +21,13 @@ jobs:
       with:
         dotnet-version: '7.0.x'
     - name: Restore
-      run: dotnet restore
+      run: dotnet restore src/Lib.Azure.Functions.Worker.ServerTiming
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build src/Lib.Azure.Functions.Worker.ServerTiming --configuration Release --no-restore
     - name: Test
-      run: dotnet test --configuration Release --no-build
+      run: dotnet test test/Test.Azure.Functions.Worker.ServerTiming --configuration Release
     - name: Pack
-      run: dotnet pack --configuration Release --no-build
+      run: dotnet pack src/Lib.Azure.Functions.Worker.ServerTiming --configuration Release --no-build
     - name: NuGet Push Lib.Azure.Functions.Worker.ServerTiming
       run: dotnet nuget push src/Lib.Azure.Functions.Worker.ServerTiming/bin/Release/Lib.Azure.Functions.Worker.ServerTiming.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
       shell: bash
