--- a/src/Lib.Azure.Functions.Worker.ServerTiming/Lib.Azure.Functions.Worker.ServerTiming.csproj
+++ b/src/Lib.Azure.Functions.Worker.ServerTiming/Lib.Azure.Functions.Worker.ServerTiming.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Lib.Azure.Functions.Worker.ServerTiming is a library which provides Server Timing API support for isolated worker process Azure Functions.</Description>
-    <Copyright>Copyright © 2023 Tomasz Pęczek</Copyright>
+    <Copyright>Copyright © 2023 - 2024 Tomasz Pęczek</Copyright>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Tomasz Pęczek</Authors>
     <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
